--- a/portfolio.html
+++ b/portfolio.html
@@ -62,6 +62,13 @@
                     <img src="map.png" style="width:150px;"></a>
               </div>
             </div>
+         <div class="row">
+              <div class="col-sm">
+                  <h4>Weather Dashboard</h4>
+                  <a href="https://dardalan84.github.io/weatherDash/workoutlog.html">
+                <img src="weather.png" style="width:150px;" ></a>
+              </div>
+              </div>
             
       </div>
 
